crates/meilisearch/tests/settings/snapshots/vectors.rs/bad_parameters_2/ollama-response-sending_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `response` unavailable for source `ollama`.\n  - note: `response` is available for sources: `rest`\n  - note: available fields for source `ollama`: `source`, `model`, `apiKey`, `dimensions`, `documentTemplate`, `documentTemplateMaxBytes`, `url`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://docs.meilisearch.com/errors#invalid-settings-embedders"
}
