crates/meilisearch/tests/settings/snapshots/vectors.rs/bad_parameters_2/openAi-url-task_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "uid": "[uid]",
  "batchUid": "[batchUid]",
  "indexUid": "test",
  "status": "succeeded",
  "type": "settingsUpdate",
  "canceledBy": null,
  "details": {
    "embedders": {
      "test": {
        "source": "openAi",
        "url": "http://rest.example/"
      }
    }
  },
  "error": null,
  "duration": "[duration]",
  "enqueuedAt": "[enqueuedAt]",
  "startedAt": "[startedAt]",
  "finishedAt": "[finishedAt]"
}
